front-shoppingcart-fix: counter on mobile version

--- a/Frontend/assets/css/common.css
+++ b/Frontend/assets/css/common.css
@@ -89,7 +89,7 @@ footer {
 .slider {
     position: relative;
     width: 5rem;
-    height: 100%;
+    height: calc(3rem + 2vw);
     overflow: hidden;
 }
 
@@ -147,7 +147,7 @@ input:checked + .slider .moon {
 
 @media (max-width: 767.98px) {
     .shopping-cart .shopping-cart-counter {
-        top: calc(12.5rem + 10vw);
+        top: calc(16rem + 10vw);
         right: 45vw;
         padding: calc(0.1rem + 0.1vw) calc(0.4rem + 0.4vw);
         font-size: calc(0.5rem + 1.5vw);
